[package]
name = "rtrlab-fishy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33", features = ["macros", "rt-multi-thread"]}
rpki = { version = "0.17", features = ["rtr", "crypto"]}
futures = "0.3.28"
tokio-stream = "0.1.14"
